# Haskell-Block-Drop-Game

./: .gitignore  CHANGELOG.md  README.md  Tetris.cabal  htetris.cabal  scores
app/: Interior.hs  Main  Main.hs  Tetris.hs  Tile.hs  World.hs
app/dist-newstyle/cache/: config
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.8/: package.cache  tetris-0.1.0.0-inplace.conf
src/: Game.hs  Interior.hs  Main.hs  Tetris  Tetris.hs  Tile.hs  TwoPlayer.hs  World.hs
