cabal-version:      2.4
name:               Tetris
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Luka Bazar & Samuel Dauk & Roger Davis
maintainer:         bazar@unm.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md
    resources/blue.bmp
    resources/cyan.bmp
    resources/green.bmp
    resources/orange.bmp
    resources/red.bmp
    resources/violet.bmp
    resources/yellow.bmp
    resources/background.bmp 
    resources/overlay.bmp

executable tetris
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Interior, Tetris, Tile, World

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, gloss, random, array
    hs-source-dirs:   app
    default-language: Haskell2010
