name:                htetris
version:             0.1.0.0
author:              Luka Bazar & Samuel Dauk & Roger Davis
maintainer:          bazar@unm.edu
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable htetris
  main-is:             Main.hs
  other-modules:       Tetris, Game
  build-depends:       base, ncurses, random, directory
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O2 -Wall -Werror
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Wnoncanonical-monad-instances
